--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,11 @@
 
     <groupId>edu.um.mt</groupId>
     <artifactId>sample-project</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>Module2</module>
+    </modules>
 
     <dependencies>
         <dependency>
@@ -56,8 +60,6 @@
             </plugin>
         </plugins>
     </build>
-
-
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
